[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
bytemuck = { version = "1.16", features = [ "derive" ] }
cgmath = "0.18.0"
image = { version = "0.24", features = [ "png", "jpeg" ] }
log = "0.4.22"
pollster = "0.4.0"
tobj = { version = "4.0.2", default-features = false, features = ["async"]}
wgpu = "23.0.1"
winit = "0.30.7"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

